--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,13 @@
-theme: jekyll-theme-slate
+# Site settings
+title                 : "Kenneth Chang"
+title_separator       : "|"
+description           : >-
+                        Personal website for Kenneth Chang.
+                        Engineer, amateur data analyst and financial trader. Based in the San Francisco Bay Area. 
+logo                  : "/assets/images/site/masthead.png"
+url                   : "https://scryvener.github.io/"
+repository            : "scryvener/scryvener.github.io"
+site.locale           : "en-US"
+timezone              : "America/Los_Angeles"
+
+theme: jekyll-theme-slate 
