--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title                 : "Kenneth Chang"
 title_separator       : "|"
 description           : >-
-                        Personal website for Kenneth Chang.
+                        The personal website, blog and depository of random thoughts of Kenneth Chang.
                         Engineer, amateur data analyst and financial trader. Based in the San Francisco Bay Area. 
 logo                  : "/assets/images/site/masthead.png"
 url                   : "https://scryvener.github.io/"
