--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ defaults              :
   - scope             :
       path            : ""
       type            : "pages"
+      layout          : default
     values            :
       author_profile  : true
       read_time       : false
